css/main.css
body {
  background-color: #fdf6e3;
}

header, footer {
  font-size: 1.5rem;
}

nav ul {
  font-family: sans-serif;
}

.logo {
  text-transform: uppercase;
}

.wrapper {
  background-color: #eee8d5;
}

#contents, #favs, #facts, #types {
  color: #93a1a1;
}

.wrapper > .dfn {
  background-color: #b58900;
}

.dfn + strong {
  color: #fff;
}
a:not(.no-highlight) {
  background-color: #719e07;
}

[rel="external"] {
  background-color: #2694d8;
}

ol li:first-child {
  color: #719e47;
}

ol li:last-child {
  color: #2aa198;
}

.types li:nth-child(odd) {
  background-color: #657ba3;
}

.types Li:nth-child(even) {
  background-color: #586e75;
}

.types Li:nth-child(3n) {
  background-color: #d04b16;
}

